# RagEval

./: .env  LICENSE  README.md  pyproject.toml
data/: story.txt
src/: main.py
src/QsnGen/: cmplx_qsn_gen.py  qsn_gen.py
src/evaluation_metrics/: correctness_score.py  faithfulness_score.py  guideline_score.py  relevancy_score.py
src/rag_evaluation/: navierag.py
src/tools/: guidelines.txt  utils.py
