[tool.poetry]
name = "rageval"
version = "0.1.0"
description = "framework to evulate rag methods"
authors = ["Rohit-Scalers <rohit@scalers.ai>"]
license = "M"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.11.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
